# mycomp

./: CMakeLists.txt  conanfile.txt
mycomp/: CMakeLists.txt
mycomp/include/mycomp/: ast.hpp  ast_visitor.hpp  lex.hpp  scanner.hpp
mycomp/include/mycomp/utils/: apply_enum.hpp  print_ast.hpp  specialization_of.hpp  token_to_string.hpp
mycomp/src/: ast.cpp  lex.cpp
mycomp/src/utils/: print_ast.cpp  token_to_string.cpp
tests/: CMakeLists.txt  ast_tests.cpp  lex_tests.cpp  scanner_tests.cpp
tests/lex/: cases.cpp
